--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
-    "html-pdf": "^2.2.0"
+    "html-pdf": "^2.2.0",
+    "pdf-merger-js": "^3.1.0"
   }
 }
